--- a/_posts/2022-02-21-Netmon.md
+++ b/_posts/2022-02-21-Netmon.md
@@ -1,11 +1,11 @@
 ---
 layout: single
 title: Netmon - Hack The Box
-excerpt:
+excerpt: Netmon is an easy Hack The Box machine
 date: 2022-01-05
 classes: wide
 header:
-  teaser: /assets/images/htb-writeup-Jerry/Jerry-Logo.png
+  teaser: /assets/images/htb-writeup-Netmon/Netmon-Logo.png
   teaser_home_page: true
   icon: /assets/images/hackthebox.webp
 categories:
@@ -93,3 +93,22 @@ Service detection performed. Please report any incorrect results at https://nmap
 
 
 ```
+
+## Enumeration
+
+We start by login in to port 21 which it is ftp because the nmap scan tells us that anonymous login is allowed.
+
+![](/assets/images/htb-writeup-Netmon/p1.png)
+
+As we can see it seems that on the FTP we have access to  the low privileges user desktop, from there we can do a **get user.txt** so will be able to see (cat/type) its content.
+Then what we do is go to our web browser and navigate to *http://10.10.10.152/* and we found a login page for PRTG Network monitor, We tried some **default** passwords but nothing works.
+
+![](/assets/images/htb-writeup-Netmon/p2.png)
+
+After that we go back to the FTP server because it seems that it has the entire HD mounted on the port. After some time looking we are able to find **programdata/paessler/PRTG Network Monitor** and we find some *PRTG Network Monitor configuration files*.
+
+![](/assets/images/htb-writeup-Netmon/p3.png)
+
+with *diff*  we check the differences between the **PRTG Conifgutation.old** and **PRTG Conifgutation.old.bak**.
+
+![](/assets/images/htb-writeup-Netmon/p4.png)
