--- a/_posts/2022-02-21-Netmon.md
+++ b/_posts/2022-02-21-Netmon.md
@@ -112,3 +112,54 @@ After that we go back to the FTP server because it seems that it has the entire 
 with *diff*  we check the differences between the **PRTG Conifgutation.old** and **PRTG Conifgutation.old.bak**.
 
 ![](/assets/images/htb-writeup-Netmon/p4.png)
+
+here we can see what there is a possible user and password:
+  * prtgadmin --> PrTg@dmin2018
+We try the credentials on PRTg loggin page but they dont work. we check the two files and realize that the **PRTG configuration.old.bak** is form the year 2018 while the  **PRTG configuration.old** is form 2019.
+
+![](/assets/images/htb-writeup-Netmon/p5.png)
+
+Now we try :
+ *  **user**: prtgadmin
+ * **pass**: PrTg@dmin2019
+
+ We got access to PRTG administration page.
+
+ ![](/assets/images/htb-writeup-Netmon/p6.png)
+
+Now that we have some extra information we could look something about the program being used in *searchsploit*
+
+
+ ![](/assets/images/htb-writeup-Netmon/p7.png)
+
+
+we look the first result that appears (Remote code execution "Authentificated") and all its information is url encrypted.
+We look for a URL decrypter and check the file. The first part of the script refers on how to create a new user in the machine and how to do it.
+
+![](/assets/images/htb-writeup-Netmon/p8.png)
+
+in the script says where to place all the "code" we need to gain the remote code execution.
+
+![](/assets/images/htb-writeup-Netmon/p10.png)
+
+we follow the second part of the script.
+
+![](/assets/images/htb-writeup-Netmon/p9.png)
+
+and here we can see how it is supossed to go the information.
+
+![](/assets/images/htb-writeup-Netmon/p11.png)
+
+After we run the commands we can check with crackmapexec to check if the creation of the user and its addition to administrators group work correctly.
+
+![](/assets/images/htb-writeup-Netmon/p12.png)
+
+As we can see after we run the code with crackmapexec we are able to see that next to the user we just created it says the user us valid and **pwn3d**.
+
+We use *evil-winrm* with the credentials just created.
+
+![](/assets/images/htb-writeup-Netmon/p13.png)
+
+Finally , we go to administrator desktop and get the root.txt
+
+![](/assets/images/htb-writeup-Netmon/p14.png)
