--- a/_posts/2022-02-21-Netmon.md
+++ b/_posts/2022-02-21-Netmon.md
@@ -1,7 +1,8 @@
 ---
 layout: single
 title: Netmon - Hack The Box
-excerpt: Netmon is an easy Hack The Box machine
+excerpt: Netmon is an easy Hack The Box machine in which we will have anonymous login access were we will be able to get the user flags right away. then for the intrusion on the machine we will found a config file
+that has some credentials and we will have access to the PRTG network Monitor administrator page were we will be able to run remote code execution as administrator thanks to the PRGT vesion being used. for this intrusion we will create a new user and add it to the administators group, finally we access to the machine with evil-winrm and using the newly created user
 date: 2022-01-05
 classes: wide
 header:
