--- a/_posts/2022-02-21-Netmon.md
+++ b/_posts/2022-02-21-Netmon.md
@@ -128,6 +128,8 @@ Now we try :
 
  ![](/assets/images/htb-writeup-Netmon/p6.png)
 
+## Privilege Escalation
+
 Now that we have some extra information we could look something about the program being used in *searchsploit*
 
 
